// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Components Snapshot Testing should maintain consistent UI structure across different card components: card-content-structure 1`] = `
<div>
  <div
    class="p-6 pt-0"
  >
    <p>
      Card content goes here
    </p>
  </div>
</div>
`;

exports[`Card Components Snapshot Testing should maintain consistent UI structure across different card components: card-footer-structure 1`] = `
<div>
  <div
    class="flex items-center p-6 pt-0"
  >
    <button>
      Action
    </button>
  </div>
</div>
`;

exports[`Card Components Snapshot Testing should maintain consistent UI structure across different card components: card-header-structure 1`] = `
<div>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="font-semibold leading-none tracking-tight"
    >
      Card Title
    </div>
    <div
      class="text-sm text-muted-foreground"
    >
      Card Description
    </div>
  </div>
</div>
`;

exports[`Card Components Snapshot Testing should maintain consistent UI structure with complete card: card-complete-structure 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="font-semibold leading-none tracking-tight"
      >
        Complete Card
      </div>
      <div
        class="text-sm text-muted-foreground"
      >
        This is a complete card example
      </div>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Main content of the card
      </p>
    </div>
    <div
      class="flex items-center p-6 pt-0"
    >
      <button>
        Save
      </button>
      <button>
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`Card Components Snapshot Testing should maintain consistent UI structure with custom styling: card-custom-styling 1`] = `
<div>
  <div
    class="rounded-xl shadow bg-gradient-to-r from-blue-500 to-purple-600 text-white border-0"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="font-semibold leading-none tracking-tight"
      >
        Styled Card
      </div>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Custom styled content
      </p>
    </div>
  </div>
</div>
`;
